<resources>
    <string name="app_name">Travel</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_email">E-Mail</string>
    <string name="text_password">Password</string>
    <string name="text_username">User Name</string>
    <string name="text_submit">Submit</string>
    <string name="text_create">Create</string>
    <string name="text_update">Update</string>
    <string name="text_edit">Edit</string>
    <string name="text_location">Location</string>
    <string name="text_place">Place</string>
    <string name="text_comment">Comment</string>
    <string name="text_description">Description</string>
    <string name="text_name">Name</string>
    <string name="text_author_comment">Author Comment</string>
    <string name="text_add">Add</string>
    <string name="text_photo">Photo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_profile">Profile</string>
    <string name="text_logout">Logout</string>
    <string name="text_setting">Setting</string>
    <string name="network_connection">Please check network connection and try again.</string>
    <string name="login_fail">Login Fail, These credentials do not match our records.</string>
    <string name="login_success">Login Success</string>
    <string name="register_success">Register Success</string>
    <string name="text_created_at">Created At</string>
    <string name="update_success">Update success</string>
    <string name="text_back">Back</string>
    <string name="name_empty">Name should not be empty !</string>
    <string name="email_valid">Email should be valid !</string>
    <string name="password_empty">Password should not be empty !</string>
    <string name="data_valid">Enter Valid Details !</string>
    <string name="select_from_gallery">Select photo from Gallery</string>
    <string name="capture_camera">Capture photo from Camera</string>
    <string name="select_action">Select Action</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="text_male">Male</string>
    <string name="text_female">Famale</string>
    <string name="login_again">Please login again</string>
    <string name="text_share">Share</string>
    <string name="text_type">Type</string>
    <string name="author_comment">Author Comment</string>
    <string name="other_comment">Other Comment</string>

    <string name="place_type_prompt">Choose a Type</string>
    <string-array name="place_type_arrays">
        <item>Shopping</item>
        <item>Relax</item>
        <item>Deluxe</item>
        <item>Poor Travel</item>
        <item>Photography</item>
        <item>Historical</item>
        <item>Food Hunter</item>
        <item>Whatever</item>
        <item>Tour Group</item>
        <item>Adventurer</item>
    </string-array>
    <string name="add_success">Add Success</string>
    <string name="text_gender">Gender</string>
    <string name="text_delete">Delete</string>
    <string name="text_confirm">Confirm</string>
    <string name="confirm_delete">Do you really want to delete place?</string>
    <string name="delete_success">Delete Success</string>
    <string name="current_location">Current Location</string>
    <string name="text_remember_me">Remember Me</string>
    <string name="location_empty">Location should not be empty</string>
</resources>
