<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/miCreate"
        android:icon="@drawable/add"
        app:showAsAction="ifRoom"
        android:title="@string/text_add">
    </item>
</menu>