<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PlaceFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/rl_place_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_title"
            android:layout_centerHorizontal="true"
            android:layout_gravity="top|center"
            android:layout_marginTop="@dimen/child_margin_top"
            android:padding="2dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorGray">

                <ImageView
                    android:id="@+id/iv_place_image"
                    android:layout_width="300dp"
                    android:layout_height="300dp" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/camera_black" />
            </RelativeLayout>
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_place_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/child_margin_top">

            <EditText
                android:id="@+id/et_place_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_place_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/child_margin_top"
                android:layout_weight=".70">

                <EditText
                    android:id="@+id/et_place_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/location"
                    android:hint="@string/text_location"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/get_current_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:textSize="10dp"
                android:text="@string/current_location" />
        </LinearLayout>

        <Spinner
            android:id="@+id/s_place_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/child_margin_top"
            android:entries="@array/place_type_arrays"
            android:prompt="@string/place_type_prompt" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_place_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/child_margin_top">

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/child_margin_top"
                android:hint="@string/text_description" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_place_author_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/child_margin_top">

            <EditText
                android:id="@+id/et_author_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/child_margin_top"
                android:hint="@string/text_author_comment" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/text_submit" />
    </LinearLayout>

</ScrollView>